fixed popup (visible when scrolling), fixed games list, added virtual scroller sticky header

--- a/SteamOrganizer.Web/src/pages/Profile/GamesTab/GamesTab.module.css
+++ b/SteamOrganizer.Web/src/pages/Profile/GamesTab/GamesTab.module.css
@@ -1,5 +1,5 @@
 .tableHeader {
-    @apply backdrop-primary mb-1 rounded-md text-foreground text-sm items-center;
+    @apply backdrop-primary mb-1 rounded-md text-foreground text-sm items-center z-10 top-0;
     display: grid;
     grid-template-columns: 148px  5fr 100px 140px;
 }
